# tech-economist

./: .env.example  .gitignore  PUBLISHING.md  README.md  dagster_assets.py  server.json  start.sh
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py  mcp_server.py
backend/app/services/: airbyte_sync.py
backend/tests/: test_mcp_server.py
docs/: DAGSTER_INTEGRATION.md  INFRA_COST_INTEGRATION.md
scripts/: publish-init-repo.sh  publish-push.sh
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/advisor/: page.tsx
web/src/app/api/advisor/: route.ts
web/src/app/api/model-routing/: route.ts
web/src/app/api/proxy/[...path]/: route.ts
web/src/app/benchmarks/: page.tsx
web/src/app/scenario/: page.tsx
web/src/app/workflows/: page.tsx
web/src/components/: sidebar.tsx
web/src/hooks/: use-polling.ts
web/src/lib/: api.ts  types.ts
